[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "camel"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = ["black", "livereload"]

[project.scripts]
cml = "camel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["camel*"]
